# sp

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  setup.sh
docker/: Dockerfile
src/: CMakeLists.txt
src/analysis/: CMakeLists.txt  unit_utils.cc  unit_utils.h
src/modulators/: CMakeLists.txt  clipper.cc  clipper.h  dry_wet.cc  dry_wet.h  ring_mod.cc  ring_mod.h
src/synthesis/: CMakeLists.txt  wave_table.h  wt_osc.cc  wt_osc.h
src/synthesis/wave_tables/: sawtooth_table.h  sine_table.h  square_table.h  triangle_table.h  wave_table_list.json  wave_table_template.h  wave_tables.h
src/synthesis/wave_tables/templates/: wave_table_include_template.h
src/tests/: CMakeLists.txt  fft_test.cc  save_wave.cc
util/: plot_sawtooth_wav.ipynb  signal_review.ipynb  wt_gen.py
